# NatsuLang

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  License.txt  NatsuLang.sln  Readme.md
CMake/Modules/: FindLLVM.cmake
Doc/: NatsuLang规范.docx
NatsuLang/: CMakeLists.txt  CharInfo.h  DeclDef.h  DiagDef.h  Diagnostic.cpp  Diagnostic.h  FileManager.cpp  Identifier.cpp  Identifier.h  Lexer.cpp  Lexer.h  NatsuLang.vcxproj  NatsuLang.vcxproj.filters  Parser.cpp  Parser.h  Preprocessor.cpp  Preprocessor.h  ReadMe.txt  SourceLocation.h  SourceManager.cpp  SourceManager.h  Statement.h  StmtDef.h  Token.cpp  Token.h  TokenDef.h
NatsuLang.AOTCompiler/: CMakeLists.txt  CodeGen.cpp  CodeGen.h  DiagIdMap.txt  Main.cpp  NatsuLang.AOTCompiler.vcxproj  NatsuLang.AOTCompiler.vcxproj.filters  Serialization.cpp  Serialization.h  Test.nat
NatsuLang.AOTCompiler.Cli/: CMakeLists.txt  Main.cpp  NatsuLang.AOTCompiler.Cli.vcxproj  NatsuLang.AOTCompiler.Cli.vcxproj.filters  Test.nat  Test2.nat
NatsuLang.ASTInterpreter/: ASTConsumer.cpp  CMakeLists.txt  DeclStorage.cpp  DiagConsumer.cpp  DiagIdMap.cpp  DiagIdMap.txt  ExprVisitor.cpp  Interpreter.cpp  Interpreter.h  InterpreterASTConsumer.cpp  InterpreterASTConsumer.h  Main.cpp  NatsuLang.ASTInterpreter.vcxproj  NatsuLang.ASTInterpreter.vcxproj.filters  Pch.h  StmtVisitor.cpp
NatsuLang.ASTInterpreter.Cli/: CMakeLists.txt  DiagIdMap.txt  Main.cpp  NatsuLang.ASTInterpreter.Cli.vcxproj
NatsuLang.JITCompiler/: .gitignore  Main.cpp  NatsuLang.JITCompiler.vcxproj  NatsuLang.JITCompiler.vcxproj.filters
NatsuLang.NatsuLangJITCompiler/: Main.cpp  NatsuLang.NatsuLangJITCompiler.vcxproj
NatsuLang.Tests/: Main.cpp  NatsuLang.Tests.vcxproj  NatsuLang.Tests.vcxproj.filters  NatsuLangUnitTests.cpp  TestClasses.h
NatsuLang/include/AST/: ASTConsumer.h  ASTContext.h  ASTNode.h  CodeCompletion.h  DeclBase.h  DeclVisitor.h  Declaration.h  Expression.h  Metadata.h  NestedNameSpecifier.h  OperationTypes.h  OperationTypesDef.h  OperatorPrecedence.h  Statement.h  StmtBase.h  StmtVisitor.h  Type.h  TypeBase.h  TypeVisitor.h
NatsuLang/include/Basic/: BuiltinTypesDef.h  CharInfo.h  Config.h  DeclDef.h  DiagDef.h  Diagnostic.h  ExprDef.h  FileManager.h  Identifier.h  Module.h  SerializationArchive.h  SourceLocation.h  SourceManager.h  Specifier.h  StmtDef.h  TargetInfo.h  TextProvider.h  Token.h  TokenDef.h  TypeDef.h
NatsuLang/include/Lex/: Lexer.h  LiteralParser.h  Preprocessor.h
NatsuLang/include/Parse/: Parser.h
NatsuLang/include/Sema/: CompilerAction.h  Declarator.h  DefaultActions.h  Scope.h  Sema.h
NatsuLang/src/AST/: ASTConsumer.cpp  ASTContext.cpp  ASTNode.cpp  CodeCompletion.cpp  DeclBase.cpp  DeclVisitor.cpp  Declaration.cpp  Expression.cpp  Metadata.cpp  NestedNameSpecifier.cpp  Statement.cpp  StmtBase.cpp  StmtVisitor.cpp  Type.cpp  TypeBase.cpp  TypeVisitor.cpp
NatsuLang/src/Basic/: Diagnostic.cpp  FileManager.cpp  Identifier.cpp  Module.cpp  SerializationArchive.cpp  SourceManager.cpp  Token.cpp
NatsuLang/src/Lex/: Lexer.cpp  LiteralParser.cpp  Preprocessor.cpp
NatsuLang/src/Parse/: Parser.cpp
NatsuLang/src/Sema/: CompilerAction.cpp  Declarator.cpp  DefaultActions.cpp  Scope.cpp  Sema.cpp
